iter_language/tests/corpus/valid/queue-pubsub-minimal.iter
queue pubsub {
  project = "my-gcp-project"
  topic = "iter-signals"
  subscription = "iter-runner"
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}

runner {
  agent = claude
  workspace = local
  queue = pubsub
  continue_on_error = false
  behavior = wait
  prompt = "do the thing"
}
